--- a/.github/workflows/check-all-seats.yml
+++ b/.github/workflows/check-all-seats.yml
@@ -8,13 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 1
     strategy:
-    fail-fast: false 
+      fail-fast: false
       matrix:
-        seat-id: [525,527,529]
+        seat-id: [525, 527, 529]
     steps:
       - name: Check Tickets
         uses: mooyoul/melon-ticket-actions@v1.1.0
-        continue-on-error: true 
+        continue-on-error: true
         with:
           product-id: 211558
           schedule-id: 100003
