--- a/.github/workflows/check-all-seats.yml
+++ b/.github/workflows/check-all-seats.yml
@@ -2,23 +2,23 @@ name: example
 on:
   schedule:
     - cron: '*/1 * * * *'
-  workflow_dispatch:   # ✅ 建議加，方便手動觸發
+  workflow_dispatch:
 
 jobs:
   job:
     runs-on: ubuntu-latest
     timeout-minutes: 1
     strategy:
-      fail-fast: false    # ← 和 matrix 對齊
+      fail-fast: false
       matrix:
-        seat-id: [525,529]
+        seat-id: [525, 529]
     steps:
       - name: Check Tickets
         uses: mooyoul/melon-ticket-actions@v1.1.0
-        continue-on-error: true 
+        continue-on-error: true
         with:
           product-id: 211558
           schedule-id: 100001
-          seat-id: ${{ matrix.seat-id }}
+          seat-id: ${{ matrix['seat-id'] }}
           slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
           message: '<@U4CF18RKL> 티켓사세요'
